--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,22 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        My To-Do Application
+        To-Do Manager
     </title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     
 </head>
 <body>
-    <%- include('header.ejs')  %>
+    <div class="grid grid-cols-6">
+        <div class="col-start-3 col-span-2">
+            <%- include('header.ejs')  %>
+            <form>
+            <div class="flex gap-2 py-4">
+                <div class="flex-auto">
+                    <input type="text" placeholder="What's next?" required class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm">
+                </div>
+                <div class="flex-auto">
+                    <input type="date" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm leading-4">
+                </div>
+                <div class="flex-none">
+                    <button type="submit" class="bg-green-600 text-white px-5 py-2 rounded mb-2 mr-2 font-medium">Add</button>
+                </div>
+            </div>
+            </form>
+            <%- include('todos.ejs')  %>
+        </div>
+    </div>
+    <%- include('footer.ejs')  %>
     
-    <table>
-        <% for( let i = 0; i < allTodos.length; i++ ) { %>
-        <tr>
-            <td>
-                <%= allTodos[i].title %>
-            </td>
-        </tr>
-        <% } %>
-    </table>
 </body>
 </html>
