--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,31 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="<%= csrfToken %>">
     <title>
         To-Do Manager
     </title>
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    
+    <script src="https://cdn.tailwindcss.com"></script>    
 </head>
 <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs')  %>
-            <form>
-            <div class="flex gap-2 py-4">
-                <div class="flex-auto">
-                    <input type="text" placeholder="What's next?" required class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm">
-                </div>
-                <div class="flex-auto">
-                    <input type="date" class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm leading-4">
-                </div>
-                <div class="flex-none">
-                    <button type="submit" class="bg-green-600 text-white px-5 py-2 rounded mb-2 mr-2 font-medium">Add</button>
-                </div>
-            </div>
-            </form>
-            <%- include('todos.ejs')  %>
+            <p class="py-2">Welcome to the TO-Do manger</p>
+            <p class="py-2">New here? <a href="/signup" class="text-green-600">Sign-up now</a></p>
+            <p class="py-2">Already have an account? <a href="/login" class="text-green-600">Sign-in</a></p>
         </div>
     </div>
     <%- include('footer.ejs')  %>
